# profiling-workflow-demo

./: .gitmodules  README.md  pyproject.toml
analysis/: 0.calculate-ap.ipynb  README.md  utils.py
analysis/output/: 0.biological_consistency_ap.csv  0.replicability_ap.csv
config_files/: config.yml
metadata/platemaps/2020_11_04_CPJUMP1/: barcode_platemap.csv
quality_control/summary/: summary.tsv
