[tool.poetry]
name = "profiling-workflow-demo"
version = "0.1.0"
description = ""
authors = ["Alan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.17"
pandas = "^2.0.3"
PyYAML = "5.3.1"
plotly = "4.14.3"
dvc-s3 = "^2.23.0"
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"
scipy = "1.10.1"
kneed = "^0.8.5"
pycytominer = {git = "https://github.com/cytomining/pycytominer", rev = "36241269c4293c24484986568ca16b2d7eb9e808"}


[tool.poetry.group.dev.dependencies]
jupytext = "^1.15.0"
ipdb = "^0.13.13"
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
